--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    Step 2: Check out the repository.
+    # Step 2: Check out the repository.
     - name: Checkout Code
       uses: actions/checkout@v4
 
@@ -27,44 +27,44 @@ jobs:
       with:
         go-version: stable
 
-    # # Step 4: Decode and Create YAML File.
-    # - name: Decode and Create YAML File
-    #   run: |
-    #     echo "${{ secrets.DOCKER_DEVELOP_APPLICATION_CONFIG_YAML }}" | base64 -d > config/yaml/v1/docker.develop.application.yaml
+    # Step 4: Decode and Create YAML File.
+    - name: Decode and Create YAML File
+      run: |
+        echo "${{ secrets.DOCKER_DEVELOP_APPLICATION_CONFIG_YAML }}" | base64 -d > config/yaml/v1/docker.develop.application.yaml
 
-    # # Step 5: Create .env File for MongoDB.
-    # - name: Create .env File for MongoDB
-    #   run: |
-    #     echo "MONGO_INITDB_DATABASE=${{ secrets.MONGO_INITDB_DATABASE }}" > infrastructure/script/data/repository/mongo/.env
-    #     echo "MONGO_INITDB_ROOT_USERNAME=${{ secrets.MONGO_INITDB_ROOT_USERNAME }}" >> infrastructure/script/data/repository/mongo/.env
-    #     echo "MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
-    #     echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> infrastructure/script/data/repository/mongo/.env
-    #     echo "ADMIN_HASHED_PASSWORD=${{ secrets.ADMIN_HASHED_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
+    # Step 5: Create .env File for MongoDB.
+    - name: Create .env File for MongoDB
+      run: |
+        echo "MONGO_INITDB_DATABASE=${{ secrets.MONGO_INITDB_DATABASE }}" > infrastructure/script/data/repository/mongo/.env
+        echo "MONGO_INITDB_ROOT_USERNAME=${{ secrets.MONGO_INITDB_ROOT_USERNAME }}" >> infrastructure/script/data/repository/mongo/.env
+        echo "MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
+        echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> infrastructure/script/data/repository/mongo/.env
+        echo "ADMIN_HASHED_PASSWORD=${{ secrets.ADMIN_HASHED_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
 
-    # # Step 6: Start MongoDB and App Develop Containers.
-    # - name: Start MongoDB and App Develop Containers
-    #   run: |
-    #     docker compose up mongodb -d
-    #     sleep 32  # Wait for MongoDB to start.
+    # Step 6: Start MongoDB and App Develop Containers.
+    - name: Start MongoDB and App Develop Containers
+      run: |
+        docker compose up mongodb -d
+        sleep 32  # Wait for MongoDB to start.
         
-    #     docker compose up app-develop -d
-    #     sleep 4  # Wait for the app container to initialize.
-    #     docker logs go-blog-platform-app-develop-1
+        docker compose up app-develop -d
+        sleep 4  # Wait for the app container to initialize.
+        docker logs go-blog-platform-app-develop-1
 
-    # # Step 7: List All Running Containers.
-    # - name: List All Running Containers
-    #   run: docker ps
+    # Step 7: List All Running Containers.
+    - name: List All Running Containers
+      run: docker ps
 
-    # # Step 8: Stop Running Containers.
-    # - name: Stop Running Containers
-    #   run: docker stop $(docker ps -a -q)
+    # Step 8: Stop Running Containers.
+    - name: Stop Running Containers
+      run: docker stop $(docker ps -a -q)
 
-    # # Step 9: Log in to DockerHub.
-    # - name: Log in to DockerHub
-    #   uses: docker/login-action@v2
-    #   with:
-    #     username: ${{ secrets.DOCKER_USERNAME }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
+    # Step 9: Log in to DockerHub.
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     # Step 10: Determine Version Tag (Using Git Tag or Manually Provided Version).
     - name: Determine Version Tag
@@ -120,14 +120,14 @@ jobs:
         git tag "${{ env.VERSION }}"
         git push origin "${{ env.VERSION }}"
 
-    # # Step 12: Build Docker Image for app-develop.
-    # - name: Build Docker Image for app-develop
-    #   run: |
-    #     docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest --push
-    #     docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} --push
+    # Step 12: Build Docker Image for app-develop.
+    - name: Build Docker Image for app-develop
+      run: |
+        docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest --push
+        docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} --push
 
-    # # Step 13: Push Docker Image to Registry.
-    # - name: Push Docker Image
-    #   run: |
-    #     docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }}
-    #     docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest
+    # Step 13: Push Docker Image to Registry.
+    - name: Push Docker Image
+      run: |
+        docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }}
+        docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest
