--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -66,7 +66,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 10: Determine Version Tag (Using Git Tag or Manually Provided Version).
+    # Step 10: Determine Version Tag (Using Git Tag or Manually Provided Version)
     - name: Determine Version Tag
       id: version
       run: |
@@ -78,7 +78,7 @@ jobs:
         
         # Set default version if no tags are found
         if [[ -z "$LATEST_TAG" ]]; then
-          VERSION="1.0.0"
+          VERSION="1.0.0"  # Default initial version
         else
           # Parse the latest tag into major, minor, and patch components
           IFS='.' read -r LATEST_MAJOR LATEST_MINOR LATEST_PATCH <<< "$LATEST_TAG"
@@ -98,7 +98,7 @@ jobs:
           else
             # If only patch has incremented, increment the patch version
             if [[ "$LATEST_PATCH" -gt "$PREVIOUS_PATCH" ]]; then
-              VERSION="$LATEST_MAJOR.$LATEST_MINOR.$LATEST_PATCH"
+              VERSION="$LATEST_MAJOR.$LATEST_MINOR.$((LATEST_PATCH + 1))"  # Increment patch
             else
               # If no change, fall back to the previous tag
               VERSION="$PREVIOUS_TAG"
