--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -41,23 +41,23 @@ jobs:
         echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> infrastructure/script/data/repository/mongo/.env
         echo "ADMIN_HASHED_PASSWORD=${{ secrets.ADMIN_HASHED_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
 
-    # # Step 6: Start MongoDB and App Develop Containers.
-    # - name: Start MongoDB and App Develop Containers
-    #   run: |
-    #     docker compose up mongodb -d
-    #     sleep 32  # Wait for MongoDB to start.
+    # Step 6: Start MongoDB and App Develop Containers.
+    - name: Start MongoDB and App Develop Containers
+      run: |
+        docker compose up mongodb -d
+        sleep 32  # Wait for MongoDB to start.
         
-    #     docker compose up app-develop -d
-    #     sleep 4  # Wait for the app container to initialize.
-    #     docker logs go-blog-platform-app-develop-1
+        docker compose up app-develop -d
+        sleep 4  # Wait for the app container to initialize.
+        docker logs go-blog-platform-app-develop-1
 
-    # # Step 7: List All Running Containers.
-    # - name: List All Running Containers
-    #   run: docker ps
+    # Step 7: List All Running Containers.
+    - name: List All Running Containers
+      run: docker ps
 
-    # # Step 8: Stop Running Containers.
-    # - name: Stop Running Containers
-    #   run: docker stop $(docker ps -a -q)
+    # Step 8: Stop Running Containers.
+    - name: Stop Running Containers
+      run: docker stop $(docker ps -a -q)
 
     # Step 9: Log in to DockerHub.
     - name: Log in to DockerHub
@@ -66,70 +66,54 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 10: Determine Version Tag (Using Git Tag or Manually Provided Version)
+    # Step 10: Determine Version Tag (Using Git Tag or Manually Provided Version).
     - name: Determine Version Tag
       id: version
       run: |
-        # Fetch all tags from remote repository
+        # Fetch all tags.
         git fetch --tags
-
-        # Get the latest tag, sorted by version
+        
+        # Get all tags and sort them to get the latest.
         LATEST_TAG=$(git tag -l | sort -V | tail -n 1)
         
-        # Set default version if no tags are found
+        # Set default version if no tag exists.
         if [[ -z "$LATEST_TAG" ]]; then
-          VERSION="1.0.0"  # Default initial version
+          VERSION="1.0.0"
         else
-          # Parse the latest tag into major, minor, and patch components
-          IFS='.' read -r LATEST_MAJOR LATEST_MINOR LATEST_PATCH <<< "$LATEST_TAG"
+          # Parse the version (major.minor.patch).
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
           
-          # Get the previous tag (second latest)
-          PREVIOUS_TAG=$(git tag -l | sort -V | tail -n 2 | head -n 1)
-          
-          # Default to patch version increment if there's no previous tag or no major/minor version change
-          if [[ -n "$PREVIOUS_TAG" ]]; then
-            IFS='.' read -r PREVIOUS_MAJOR PREVIOUS_MINOR PREVIOUS_PATCH <<< "$PREVIOUS_TAG"
-          fi
-
-          # Logic to determine new version based on changes:
-          if [[ -z "$PREVIOUS_TAG" || "$LATEST_MAJOR" -gt "$PREVIOUS_MAJOR" || "$LATEST_MINOR" -gt "$PREVIOUS_MINOR" ]]; then
-            # If there's a change in major or minor version, use the latest tag
-            VERSION="$LATEST_TAG"
+          # If there's no PATCH value (like "1.3"), set PATCH to 0
+          if [[ -z "$PATCH" ]]; then
+            PATCH=0
           else
-            # If only patch has incremented, increment the patch version
-            if [[ "$LATEST_PATCH" -gt "$PREVIOUS_PATCH" ]]; then
-              VERSION="$LATEST_MAJOR.$LATEST_MINOR.$((LATEST_PATCH + 1))"  # Increment patch
-            else
-              # If no change, fall back to the previous tag
-              VERSION="$PREVIOUS_TAG"
-            fi
+            # Increment the version based on the current version (increment patch by default).
+            PATCH=$((PATCH + 1))
           fi
+          
+          # Set the new version (e.g., 1.0.1 or 1.1.0).
+          VERSION="$MAJOR.$MINOR.$PATCH"
+          
+          # # Loop until we find a tag that does not exist.
+          # while git rev-parse "$VERSION" >/dev/null 2>&1; do
+          #   PATCH=$((PATCH + 1))  # Increment patch version again if the tag already exists.
+          #   VERSION="$MAJOR.$MINOR.$PATCH"
+          # done
         fi
-
-        # Set the version in the GitHub Actions environment variable
+        
         echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "Version Tag: $VERSION"
 
-        # Output the determined version tag for visibility
-        echo "Determined Version: $VERSION"
-
-
-    # Step 11: Push New Git Tag, only if the tag doesn't exist.
+    # Step 11: Push New Git Tag.
     - name: Push New Git Tag
       if: ${{ success() }}
       run: |
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
         
-        # Check if the tag already exists.
-        TAG_EXISTS=$(git tag -l "${{ env.VERSION }}")
-        
-        if [[ -z "$TAG_EXISTS" ]]; then
-          # If tag doesn't exist, create and push the new tag.
-          git tag "${{ env.VERSION }}"
-          git push origin "${{ env.VERSION }}"
-        else
-          echo "Tag ${{ env.VERSION }} already exists. Skipping tag creation."
-        fi
+        # Create and push the new tag
+        git tag "${{ env.VERSION }}"
+        git push origin "${{ env.VERSION }}"
 
     # Step 12: Build Docker Image for app-develop.
     - name: Build Docker Image for app-develop
