The final test with the working rollbacked version

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -41,23 +41,23 @@ jobs:
         echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> infrastructure/script/data/repository/mongo/.env
         echo "ADMIN_HASHED_PASSWORD=${{ secrets.ADMIN_HASHED_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
 
-    # # Step 6: Start MongoDB and App Develop Containers.
-    # - name: Start MongoDB and App Develop Containers
-    #   run: |
-    #     docker compose up mongodb -d
-    #     sleep 32  # Wait for MongoDB to start.
+    # Step 6: Start MongoDB and App Develop Containers.
+    - name: Start MongoDB and App Develop Containers
+      run: |
+        docker compose up mongodb -d
+        sleep 32  # Wait for MongoDB to start.
         
-    #     docker compose up app-develop -d
-    #     sleep 4  # Wait for the app container to initialize.
-    #     docker logs go-blog-platform-app-develop-1
+        docker compose up app-develop -d
+        sleep 4  # Wait for the app container to initialize.
+        docker logs go-blog-platform-app-develop-1
 
-    # # Step 7: List All Running Containers.
-    # - name: List All Running Containers
-    #   run: docker ps
+    # Step 7: List All Running Containers.
+    - name: List All Running Containers
+      run: docker ps
 
-    # # Step 8: Stop Running Containers.
-    # - name: Stop Running Containers
-    #   run: docker stop $(docker ps -a -q)
+    # Step 8: Stop Running Containers.
+    - name: Stop Running Containers
+      run: docker stop $(docker ps -a -q)
 
     # Step 9: Log in to DockerHub.
     - name: Log in to DockerHub
@@ -93,12 +93,6 @@ jobs:
           
           # Set the new version (e.g., 1.0.1 or 1.1.0).
           VERSION="$MAJOR.$MINOR.$PATCH"
-          
-          # # Loop until we find a tag that does not exist.
-          # while git rev-parse "$VERSION" >/dev/null 2>&1; do
-          #   PATCH=$((PATCH + 1))  # Increment patch version again if the tag already exists.
-          #   VERSION="$MAJOR.$MINOR.$PATCH"
-          # done
         fi
         
         echo "VERSION=$VERSION" >> $GITHUB_ENV
