--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -41,23 +41,23 @@ jobs:
         echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> infrastructure/script/data/repository/mongo/.env
         echo "ADMIN_HASHED_PASSWORD=${{ secrets.ADMIN_HASHED_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
 
-    # Step 6: Start MongoDB and App Develop Containers.
-    - name: Start MongoDB and App Develop Containers
-      run: |
-        docker compose up mongodb -d
-        sleep 32  # Wait for MongoDB to start.
+    # # Step 6: Start MongoDB and App Develop Containers.
+    # - name: Start MongoDB and App Develop Containers
+    #   run: |
+    #     docker compose up mongodb -d
+    #     sleep 32  # Wait for MongoDB to start.
         
-        docker compose up app-develop -d
-        sleep 4  # Wait for the app container to initialize.
-        docker logs go-blog-platform-app-develop-1
+    #     docker compose up app-develop -d
+    #     sleep 4  # Wait for the app container to initialize.
+    #     docker logs go-blog-platform-app-develop-1
 
-    # Step 7: List All Running Containers.
-    - name: List All Running Containers
-      run: docker ps
+    # # Step 7: List All Running Containers.
+    # - name: List All Running Containers
+    #   run: docker ps
 
-    # Step 8: Stop Running Containers.
-    - name: Stop Running Containers
-      run: docker stop $(docker ps -a -q)
+    # # Step 8: Stop Running Containers.
+    # - name: Stop Running Containers
+    #   run: docker stop $(docker ps -a -q)
 
     # Step 9: Log in to DockerHub.
     - name: Log in to DockerHub
@@ -66,63 +66,17 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 10: Determine Version Tag (Using Git Tag or Manually Provided Version).
-    - name: Determine Version Tag
-      id: version
-      run: |
-        # Fetch all tags.
-        git fetch --tags
-        
-        # Get all tags and sort them to get the latest.
-        LATEST_TAG=$(git tag -l | sort -V | tail -n 1)
-        
-        # Set default version if no tag exists.
-        if [[ -z "$LATEST_TAG" ]]; then
-          VERSION="1.0.0"
-        else
-          # Parse the version (major.minor.patch).
-          IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
-          
-          # If there's no PATCH value (like "1.3"), set PATCH to 0
-          if [[ -z "$PATCH" ]]; then
-            PATCH=0
-          else
-            # Increment the version based on the current version (increment patch by default).
-            PATCH=$((PATCH + 1))
-          fi
-          
-          # Set the new version (e.g., 1.0.1 or 1.1.0).
-          VERSION="$MAJOR.$MINOR.$PATCH"
-        fi
-        
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
-        echo "Version Tag: $VERSION"
+    # Step 9: Call Tag Version workflow
+    - name: Get latest git tag
+      uses: ./.github/workflows/determine-version.yml
 
-    # Step 11: Push New Git Tag, only if the tag doesn't exist.
-    - name: Push New Git Tag
-      if: ${{ success() }}
-      run: |
-        git config user.name "GitHub Actions"
-        git config user.email "actions@github.com"
-        
-        # Check if the tag already exists.
-        TAG_EXISTS=$(git tag -l "${{ env.VERSION }}")
-        
-        if [[ -z "$TAG_EXISTS" ]]; then
-          # If tag doesn't exist, create and push the new tag.
-          git tag "${{ env.VERSION }}"
-          git push origin "${{ env.VERSION }}"
-        else
-          echo "Tag ${{ env.VERSION }} already exists. Skipping tag creation."
-        fi
-
-    # Step 12: Build Docker Image for app-develop.
+    # Step 10: Build Docker Image for app-develop.
     - name: Build Docker Image for app-develop
       run: |
         docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest --push
         docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} --push
 
-    # Step 13: Push Docker Image to Registry.
+    # Step 11: Push Docker Image to Registry.
     - name: Push Docker Image
       run: |
         docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }}
