--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -66,17 +66,18 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 9: Call Tag Version workflow
-    - name: Get latest git tag
-      uses: ./.github/workflows/tag-version.yml
+    # Step 7: Call Tag Version workflow to get the latest version tag
+    - name: Get Latest Git Tag
+      uses: ./.github/workflows/tag-version.yml  # Correctly reference the reusable workflow here
 
-    # Step 10: Build Docker Image for app-develop.
+
+    # Step 11: Build Docker Image for app-develop.
     - name: Build Docker Image for app-develop
       run: |
         docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest --push
         docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} --push
 
-    # Step 11: Push Docker Image to Registry.
+    # Step 12: Push Docker Image to Registry.
     - name: Push Docker Image
       run: |
         docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }}
