--- a/.github/workflows/tag-version.yml
+++ b/.github/workflows/tag-version.yml
@@ -16,6 +16,11 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v4
 
+    - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: stable
+
     - name: Determine Version Tag
       id: version
       run: |
