--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -33,3 +33,14 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.60
+
+  go-vet:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: stable
+
+      - name: Run go vet
+        run: go vet ./...
