--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -66,10 +66,13 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 7: Call Tag Version workflow to get the latest version tag
-    - name: Get Latest Git Tag
-      uses: ./.github/workflows/tag-version.yml  # Correctly reference the reusable workflow here
-
+    # Step 10: Call the Tag Version.
+    - name: Determine Version Tag
+      id: version
+      run: |
+        VERSION=$(git describe --tags --abbrev=0 || echo "1.0.0")
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "Version Tag: $VERSION"
 
     # Step 11: Build Docker Image for app-develop.
     - name: Build Docker Image for app-develop
