--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -59,28 +59,31 @@ jobs:
     # - name: Stop Running Containers
     #   run: docker stop $(docker ps -a -q)
 
-    # Step 9: Log in to DockerHub.
-    - name: Log in to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+    # # Step 9: Log in to DockerHub.
+    # - name: Log in to DockerHub
+    #   uses: docker/login-action@v2
+    #   with:
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 10: Determine Version Tag.
-    - name: Determine Version Tag
-      id: version
-      run: |
-        # Fetch all Git tags
-        git fetch --tags
+    # # Step 10: Determine Version Tag.
+    # - name: Determine Version Tag
+    #   id: version
+    #   run: |
+    #     # Fetch all Git tags
+    #     git fetch --tags
         
-        # Get the latest tag (without incrementation)
-        LATEST_TAG=$(git tag -l --sort=-v:refname | head -n 1)
+    #     # Get the latest tag (without incrementation)
+    #     LATEST_TAG=$(git tag -l --sort=-v:refname | head -n 1)
 
-        # Set the version to the latest tag
-        VERSION="$LATEST_TAG"
+    #     # Set the version to the latest tag
+    #     VERSION="$LATEST_TAG"
         
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
-        echo "Version Tag: $VERSION"
+    #     echo "VERSION=$VERSION" >> $GITHUB_ENV
+    #     echo "Version Tag: $VERSION"
+
+    - name: Call Docker login and version tag workflow
+        uses: ./.github/workflows/docker-login-and-version-tag.yml
 
     # Step 11: Build Docker Image for app-develop.
     - name: Build Docker Image for app-develop
