--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -32,58 +32,61 @@ jobs:
       run: |
         echo "${{ secrets.DOCKER_DEVELOP_APPLICATION_CONFIG_YAML }}" | base64 -d > config/yaml/v1/docker.develop.application.yaml
 
-    # # Step 5: Create .env File for MongoDB.
-    # - name: Create .env File for MongoDB
-    #   run: |
-    #     echo "MONGO_INITDB_DATABASE=${{ secrets.MONGO_INITDB_DATABASE }}" > infrastructure/script/data/repository/mongo/.env
-    #     echo "MONGO_INITDB_ROOT_USERNAME=${{ secrets.MONGO_INITDB_ROOT_USERNAME }}" >> infrastructure/script/data/repository/mongo/.env
-    #     echo "MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
-    #     echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> infrastructure/script/data/repository/mongo/.env
-    #     echo "ADMIN_HASHED_PASSWORD=${{ secrets.ADMIN_HASHED_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
+    # Step 5: Create .env File for MongoDB.
+    - name: Create .env File for MongoDB
+      run: |
+        echo "MONGO_INITDB_DATABASE=${{ secrets.MONGO_INITDB_DATABASE }}" > infrastructure/script/data/repository/mongo/.env
+        echo "MONGO_INITDB_ROOT_USERNAME=${{ secrets.MONGO_INITDB_ROOT_USERNAME }}" >> infrastructure/script/data/repository/mongo/.env
+        echo "MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
+        echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> infrastructure/script/data/repository/mongo/.env
+        echo "ADMIN_HASHED_PASSWORD=${{ secrets.ADMIN_HASHED_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
 
-    # # Step 6: Start MongoDB and App Develop Containers.
-    # - name: Start MongoDB and App Develop Containers
-    #   run: |
-    #     docker compose up mongodb -d
-    #     sleep 32  # Wait for MongoDB to start.
+    # Step 6: Start MongoDB and App Develop Containers.
+    - name: Start MongoDB and App Develop Containers
+      run: |
+        docker compose up mongodb -d
+        # Wait for MongoDB to start, and check if it's ready.
+        until docker exec mongodb mongo --eval "db.adminCommand('ping')" > /dev/null 2>&1; do
+          echo "Waiting for MongoDB to start..."
+          sleep 5
+        done
+        echo "MongoDB is up and running!"
+
+        docker compose up app-develop -d
+        # Wait for the app container to initialize.
+        sleep 4
+        docker logs go-blog-platform-app-develop-1 || echo "App container failed to start."
+
+    # Step 7: List All Running Containers.
+    - name: List All Running Containers
+      run: docker ps
+
+    # Step 8: Stop Running Containers.
+    - name: Stop Running Containers
+      run: docker stop $(docker ps -a -q)
+
+    # Step 9: Log in to DockerHub.
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    # Step 10: Determine Version Tag.
+    - name: Determine Version Tag
+      id: version
+      run: |
+        # Fetch all Git tags.
+        git fetch --tags
         
-    #     docker compose up app-develop -d
-    #     sleep 4  # Wait for the app container to initialize.
-    #     docker logs go-blog-platform-app-develop-1
+        # Get the latest tag (without incrementation).
+        LATEST_TAG=$(git tag -l --sort=-v:refname | head -n 1)
 
-    # # Step 7: List All Running Containers.
-    # - name: List All Running Containers
-    #   run: docker ps
-
-    # # Step 8: Stop Running Containers.
-    # - name: Stop Running Containers
-    #   run: docker stop $(docker ps -a -q)
-
-    # # Step 9: Log in to DockerHub.
-    # - name: Log in to DockerHub
-    #   uses: docker/login-action@v2
-    #   with:
-    #     username: ${{ secrets.DOCKER_USERNAME }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
-
-    # # Step 10: Determine Version Tag.
-    # - name: Determine Version Tag
-    #   id: version
-    #   run: |
-    #     # Fetch all Git tags
-    #     git fetch --tags
+        # Set the version to the latest tag.
+        VERSION="$LATEST_TAG"
         
-    #     # Get the latest tag (without incrementation)
-    #     LATEST_TAG=$(git tag -l --sort=-v:refname | head -n 1)
-
-    #     # Set the version to the latest tag
-    #     VERSION="$LATEST_TAG"
-        
-    #     echo "VERSION=$VERSION" >> $GITHUB_ENV
-    #     echo "Version Tag: $VERSION"
-
-    - name: Call Docker login and version tag workflow
-      uses: ./.github/workflows/docker-login-and-version-tag.yml
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "Version Tag: $VERSION"
 
     # Step 11: Build Docker Image for app-develop.
     - name: Build Docker Image for app-develop
