--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -65,18 +65,18 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    
+
     # Step 10: Determine Version Tag.
     - name: Determine Version Tag
       id: version
       run: |
-        # Fetch all Git tags
+        # Fetch all Git tags.
         git fetch --tags
         
-        # Get the latest tag (without incrementation)
+        # Get the latest tag (without incrementation).
         LATEST_TAG=$(git tag -l --sort=-v:refname | head -n 1)
 
-        # Set the version to the latest tag
+        # Set the version to the latest tag.
         VERSION="$LATEST_TAG"
         
         echo "VERSION=$VERSION" >> $GITHUB_ENV
