--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,47 +1,46 @@
-name: Auto Merge on Success
+name: Auto Merge PRs
 
 on:
   pull_request:
-    branches: ["*"]  # Trigger on all branches.
+    types: [opened, synchronize, reopened]
+    branches:
+      - '**'  # Matches all branches.
 
 jobs:
-  # Step 1: Call the Common Workflow.
-  common-workflow:
-    uses: ./.github/workflows/common.yml  # Reference the reusable workflow.
-    permissions:
-      contents: read
-      pull-requests: read
-
-  # Step 2: Check if all checks have passed.
-  check-pr-status:
-    needs: common-workflow
-    runs-on: ubuntu-latest
-    steps:
-      # Step 2.1: Wait for all checks to pass
-      - name: Wait for checks to pass
-        run: |
-          PR_STATUS=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }})
-          STATE=$(echo "$PR_STATUS" | jq -r '.state')
-          if [ "$STATE" != "open" ]; then
-            echo "Pull request is not open, exiting."
-            exit 1
-          fi
-          CHECKS_STATUS=$(echo "$PR_STATUS" | jq -r '.statuses[] | select(.state=="success")')
-          if [ -z "$CHECKS_STATUS" ]; then
-            echo "Checks are not successful yet, exiting."
-            exit 1
-          fi
-
-  # Step 3: Auto Merge PR if all checks have passed.
   auto-merge:
-    needs: check-pr-status
     runs-on: ubuntu-latest
-    if: needs.check-pr-status.result == 'success'  # Ensure this runs only when previous job is successful.
+    if: github.event.pull_request.mergeable == true  # Only proceed if the PR is mergeable
+
     steps:
-      - name: Merge Pull Request
-        run: |
-          PR_NUMBER=${{ github.event.pull_request.number }}
-          curl -X PUT -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -d '{"commit_message":"Auto-merging PR #${PR_NUMBER}","merge_method":"merge"}' \
-            https://api.github.com/repos/${{ github.repository }}/pulls/${PR_NUMBER}/merge
+      # Step 1: Checkout the PR's code.
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Step 2: Wait for status checks to complete.
+      - name: Wait for status checks
+        uses: peter-evans/wait-for-status@v2
+        with:
+          status-context: 'ci/circleci'  # Replace with your actual status check context if needed.
+          check-interval: '5'  # Check every 5 seconds.
+          max-wait: '1800'  # Wait for a maximum of 30 minutes.
+
+      # Step 3: Merge the pull request automatically if checks are passed.
+      - name: Merge PR
+        uses: github-script@v6
+        with:
+          script: |
+            const pr = github.context.payload.pull_request;
+            const owner = github.context.repo.owner;
+            const repo = github.context.repo.repo;
+            
+            // Check if the PR is mergeable
+            if (pr.mergeable_state === 'clean') {
+              await github.rest.pulls.merge({
+                owner: owner,
+                repo: repo,
+                pull_number: pr.number,
+              });
+              console.log(`Pull request #${pr.number} merged successfully.`);
+            } else {
+              console.log(`Pull request #${pr.number} is not mergeable.`);
+            }
