--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.mergeable == true  # Only proceed if the PR is mergeable
 
     steps:
       # Step 1: Checkout the PR's code.
@@ -24,7 +23,11 @@ jobs:
           check-interval: '5'  # Check every 5 seconds.
           max-wait: '1800'  # Wait for a maximum of 30 minutes.
 
-      # Step 3: Merge the pull request automatically if checks are passed.
+      # Step 3: Log and check the PR mergeable state
+      - name: Log mergeable state
+        run: echo "Mergeable state: ${{ github.event.pull_request.mergeable_state }}"
+
+      # Step 4: Merge the pull request automatically if checks are passed.
       - name: Merge PR
         uses: github-actions/github-script@v6
         with:
@@ -33,6 +36,8 @@ jobs:
             const owner = github.context.repo.owner;
             const repo = github.context.repo.repo;
             
+            console.log(`Checking PR #${pr.number} mergeable state...`);
+
             // Check if the PR is mergeable
             if (pr.mergeable_state === 'clean') {
               await github.rest.pulls.merge({
@@ -42,5 +47,5 @@ jobs:
               });
               console.log(`Pull request #${pr.number} merged successfully.`);
             } else {
-              console.log(`Pull request #${pr.number} is not mergeable.`);
+              console.log(`Pull request #${pr.number} is not mergeable (state: ${pr.mergeable_state}).`);
             }
