--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -30,7 +30,7 @@ jobs:
 
       # Step 4: Merge the pull request automatically if checks are passed.
       - name: Merge PR
-        uses: github-actions/github-script@v6
+        uses: actions/github-script@v6
         with:
           script: |
             const pr = github.context.payload.pull_request;
