--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -45,16 +45,8 @@ jobs:
     - name: Start MongoDB and App Develop Containers
       run: |
         docker compose up mongodb -d
-        timeout=32
-        while ! docker exec mongodb mongo --eval "db.stats()" > /dev/null 2>&1; do
-          timeout=$((timeout-1))
-          if [ $timeout -le 0 ]; then
-            echo "MongoDB did not start in time"
-            exit 1
-          fi
-          sleep 1
-        done
-
+        sleep 32  # Wait for MongoDB to start.
+        
         docker compose up app-develop -d
         sleep 4  # Wait for the app container to initialize.
         docker logs go-blog-platform-app-develop-1
@@ -99,3 +91,4 @@ jobs:
           --tag ${{ secrets.DOCKER_USERNAME }}/app-develop:latest \
           --cache-from type=registry,ref=${{ secrets.DOCKER_USERNAME }}/app-develop:latest \
           --push .
+          
